Fixed an issuethat happens when tapping menu buttons on mobile devices - v1.0.1

--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -52,6 +52,7 @@
     font-family: variables.$font-family-sans-serif;
     font-weight: bold;
     text-decoration-line: none;
+    -webkit-tap-highlight-color: transparent;
 
     @media (min-width: 1000px) {
       width: 120px;
